test/TestPhases/typechecker/valid/relational.blc
@[EntryPoint]

activity main ()
    var i: int8
    var n: nat8
    var b: bits8
    var f: float32
    var a: [2]bool

    if i < 2 then end
    if i < 10212301232 then end
    if b < (i as bits8) then end
    if 1 < f then end
    if 1 < (2: int8) then end
    
    await true
end